driver info organization

--- a/views/_booking_management_additional_drivers.erb
+++ b/views/_booking_management_additional_drivers.erb
@@ -18,7 +18,8 @@
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_date_of_birth %></span>
                   <span class="entity-fieldvalue">
-                     <input type="text" name="additional_driver_1_date_of_birth" id="additional_driver_1_date_of_birth" class="date_control" size="15" maxlength="10"/>
+                     <input type="text" name="additional_driver_1_date_of_birth" id="additional_driver_1_date_of_birth" class="date_control" 
+                     autocomplete="off" size="15" maxlength="10"/>
                   </span>
                 </div>
               </div>               
@@ -45,7 +46,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_date %></span>
                     <span class="entity-fieldvalue">
-                        <input type="text" name="additional_driver_1_document_id_date" id="additional_driver_1_document_id_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_1_document_id_date" id="additional_driver_1_document_id_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
                 </div>
@@ -53,7 +54,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_expiration_date %></span>
                     <span class="entity-fieldvalue">
-                        <input type="text" name="additional_driver_1_document_id_expiration_date" id="additional_driver_1_document_id_expiration_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_1_document_id_expiration_date" id="additional_driver_1_document_id_expiration_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
                 </div>
@@ -71,7 +72,7 @@
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_date %></span>
                      <span class="entity-fieldvalue">                     
-                        <input type="text" name="additional_driver_1_driving_license_date" id="additional_driver_1_driving_license_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_1_driving_license_date" id="additional_driver_1_driving_license_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
               </div>
@@ -79,7 +80,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_driving_license_expiration_date %></span>
                     <span class="entity-fieldvalue">
-                     <input type="text" name="additional_driver_1_driving_license_expiration_date" id="additional_driver_1_driving_license_expiration_date" class="date_control" size="15" maxlength="10"/>
+                     <input type="text" name="additional_driver_1_driving_license_expiration_date" id="additional_driver_1_driving_license_expiration_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                   </span>
                   </div>
                 </div>
@@ -111,7 +112,7 @@
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_date_of_birth %></span>
                   <span class="entity-fieldvalue">
-                     <input type="text" name="additional_driver_2_date_of_birth" id="additional_driver_2_date_of_birth" class="date_control" size="15" maxlength="10"/>
+                     <input type="text" name="additional_driver_2_date_of_birth" id="additional_driver_2_date_of_birth" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                   </span>
                 </div>
               </div>               
@@ -139,7 +140,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_date %></span>
                     <span class="entity-fieldvalue">
-                        <input type="text" name="additional_driver_2_document_id_date" id="additional_driver_2_document_id_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_2_document_id_date" id="additional_driver_2_document_id_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
                 </div>
@@ -147,7 +148,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_expiration_date %></span>
                     <span class="entity-fieldvalue">
-                        <input type="text" name="additional_driver_2_document_id_expiration_date" id="additional_driver_2_document_id_expiration_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_2_document_id_expiration_date" id="additional_driver_2_document_id_expiration_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
                 </div>
@@ -165,7 +166,7 @@
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_date %></span>
                      <span class="entity-fieldvalue">                     
-                        <input type="text" name="additional_driver_2_driving_license_date" id="additional_driver_2_driving_license_date" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="additional_driver_2_driving_license_date" id="additional_driver_2_driving_license_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                      </span>
                   </div>
               </div>
@@ -173,7 +174,7 @@
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_driving_license_expiration_date %></span>
                     <span class="entity-fieldvalue">
-                     <input type="text" name="additional_driver_2_driving_license_expiration_date" id="additional_driver_2_driving_license_expiration_date" class="date_control" size="15" maxlength="10"/>
+                     <input type="text" name="additional_driver_2_driving_license_expiration_date" id="additional_driver_2_driving_license_expiration_date" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                   </span>
                   </div>
                 </div>
