--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -261,6 +261,30 @@
                          </div>
                       </div>
                       <% end %>
+                      <% if @booking_item_family.purchasable %>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_year%></label>
+                        <div class="col-md-9">
+                        <input type="number" step="1" maxlength="4" id="purchasable_year" name="purchasable_year" class="form-control" <%% if (entity) { %> value="<%%=entity.purchasable_year%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <% end %>
+                      <% if @booking_item_family.registrable %>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.registrable.registrable_registration_date%></label>
+                        <div class="col-md-9">
+                        <input type="text" maxlength="10" id="registrable_registration_date" name="registrable_registration_date" class="form-control"/>
+                         </div>
+                      </div>
+                      <% end %>  
+                      <% if @booking_item_family.usage %>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.usage.usage_units%></label>
+                        <div class="col-md-9">
+                        <input type="number" step="1" id="usage_units" name="usage_units" class="form-control" <%% if (entity) { %> value="<%%=entity.usage_units%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <% end %>                                              
                       <div class="form-group">
                         <label class="col-md-3 control-label"><%= t.booking_item_management.form.description.label %></label>
                         <div class="col-md-9">
@@ -269,7 +293,7 @@
                       </div>
                       <% if @multiple_rental_locations %>
                       <div class="form-group">
-                        <label class="col-md-3 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['logical_organization'] %></label>
+                        <label class="col-md-3 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['physical_organization'] %></label>
                         <div class="col-md-8">
                           <select name="rental_storage[id]" id="rental_storage[id]" class="form-control"/>
                         </div>
@@ -287,7 +311,6 @@
           </div>
         </div>
 
-
         <!-- Characteristics -->
 
         <div class="row">
@@ -300,32 +323,29 @@
                   <form name="element" class="form-horizontal" method="POST">
                       <input type="hidden" name="reference" value="<%%=entity.reference%>"/>
                       <div class="form-group">
-                        <label class="col-md-3 control-label"><%= t.booking_item_management.form.characteristic_1.label %></label>
-                        <div class="col-md-9">
+                        <label class="col-md-2 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['resource_characteristic_1'] %></label>
+                        <div class="col-md-3">
                         <input type="text" maxlength="80" id="characteristic_1" name="characteristic_1" class="form-control" <%% if (entity) { %> value="<%%=entity.characteristic_1%>" <%% } %>/>
                          </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="col-md-3 control-label"><%= t.booking_item_management.form.characteristic_2.label %></label>
-                        <div class="col-md-9">
+                        <label class="col-md-3 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['resource_characteristic_2'] %></label>
+                        <div class="col-md-3">
                         <input type="text" maxlength="80" id="characteristic_2" name="characteristic_2" class="form-control" <%% if (entity) { %> value="<%%=entity.characteristic_2%>" <%% } %>/>
                          </div>
                       </div>
                       <div class="form-group">
-                        <label class="col-md-3 control-label"><%= t.booking_item_management.form.characteristic_3.label %></label>
-                        <div class="col-md-9">
+                        <label class="col-md-2 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['resource_characteristic_3'] %></label>
+                        <div class="col-md-3">
                         <input type="text" maxlength="80" id="characteristic_1" name="characteristic_3" class="form-control" <%% if (entity) { %> value="<%%=entity.characteristic_3%>" <%% } %>/>
                          </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="col-md-3 control-label"><%= t.booking_item_management.form.characteristic_4.label %></label>
-                        <div class="col-md-9">
+                        <label class="col-md-3 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['resource_characteristic_4'] %></label>
+                        <div class="col-md-3">
                         <input type="text" maxlength="80" id="characteristic_4" name="characteristic_4" class="form-control" <%% if (entity) { %> value="<%%=entity.characteristic_4%>" <%% } %>/>
                          </div>
                       </div>
+                      <hr>
                       <div class="form-group">
-                        <div class="col-md-9 col-md-offset-3">
-                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                        <div class="col-md-7 col-md-offset-4">
+                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button pull-right" value="<%=t.entitymanagement.update%>"/>
                         </div>
                       </div>
                   </form>
@@ -333,6 +353,190 @@
             </div>
           </div>
         </div>
+
+        <!-- Purchasable -->
+
+        <% if @booking_item_family.purchasable %>
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%=t.booking_item_extra_data.purchasable.title%></h3>
+              </div>
+              <div class="block-content">
+                  <form name="element" class="form-horizontal" method="POST">
+                      <input type="hidden" name="reference" value="<%%=entity.reference%>"/>
+                      <div class="form-group">
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_adquisition_date%></label>
+                        <div class="col-md-2">
+                        <input type="text" maxlength="10" id="purchasable_adquisition_date" name="purchasable_adquisition_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_purchase_price%></label>
+                        <div class="col-md-2">
+                        <input type="number" maxlength="10" id="purchasable_purchase_price" name="purchasable_purchase_price" class="form-control" <%% if (entity) { %> value="<%%=entity.purchasable_purchase_price%>" <%% } %>/>
+                         </div>
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_purchase_units%></label>
+                        <div class="col-md-2">
+                        <input type="number" maxlength="10" id="purchasable_purchase_units" name="purchasable_purchase_units" class="form-control" <%% if (entity) { %> value="<%%=entity.purchasable_purchase_units%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_sold_release_date%></label>
+                        <div class="col-md-2">
+                        <input type="text" maxlength="10" id="purchasable_sold_release_date" name="purchasable_sold_release_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.purchasable.purchasable_sale_price%></label>
+                        <div class="col-md-2">
+                        <input type="number" maxlength="10" id="purchasable_sale_price" name="purchasable_sale_price" class="form-control" <%% if (entity) { %> value="<%%=entity.purchasable_sale_price%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <hr>
+                      <div class="form-group">
+                        <div class="col-md-9 col-md-offset-3">
+                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button pull-right" value="<%=t.entitymanagement.update%>"/>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+
+        <!-- Maintenance -->
+
+        <% if @booking_item_family.maintenance %>
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%=t.booking_item_extra_data.maintenance.title%></h3>
+              </div>
+              <div class="block-content">
+                  <form name="element" class="form-horizontal" method="POST">
+                      <input type="hidden" name="reference" value="<%%=entity.reference%>"/>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_external_revision_last_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="maintenance_external_revision_last_date" name="maintenance_external_revision_last_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_external_revision_last_units%></label>
+                        <div class="col-md-3">
+                        <input type="number" maxlength="10" id="maintenance_external_revision_last_units" name="maintenance_external_revision_last_units" class="form-control" <%% if (entity) { %> value="<%%=entity.maintenance_external_revision_last_units%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_external_revision_next_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="maintenance_external_revision_next_date" name="maintenance_external_revision_next_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_external_revision_next_units%></label>
+                        <div class="col-md-3">
+                        <input type="number" maxlength="10" id="maintenance_external_revision_next_units" name="maintenance_external_revision_next_units" class="form-control" <%% if (entity) { %> value="<%%=entity.maintenance_external_revision_next_units%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <hr>
+                      <div class="form-group">
+                        <div class="col-md-9 col-md-offset-3">
+                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button pull-right" value="<%=t.entitymanagement.update%>"/>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%=t.booking_item_extra_data.maintenance.official_title%></h3>
+              </div>
+              <div class="block-content">
+                  <form name="element" class="form-horizontal" method="POST">
+                      <input type="hidden" name="reference" value="<%%=entity.reference%>"/>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_official_revision_last_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="maintenance_official_revision_last_date" name="maintenance_official_revision_last_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-4 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_official_revision_last_ok%></label>
+                        <div class="col-md-2 checkbox">
+                           <label for="maintenance_official_revision_last_ok">
+                             <input type="checkbox" name="maintenance_official_revision_last_ok" id="maintenance_official_revision_last_ok" <%% if (entity.maintenance_official_revision_last_ok) {%>checked<%%}%>>  
+                           </label>
+                        </div>        
+                      </div>  
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.maintenance.maintenance_official_revision_next_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="maintenance_official_revision_next_date" name="maintenance_official_revision_next_date" class="form-control"/>
+                         </div>
+                      </div>
+                      <hr>
+                      <div class="form-group">
+                        <div class="col-md-9 col-md-offset-3">
+                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button pull-right" value="<%=t.entitymanagement.update%>"/>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+            </div>
+          </div>
+        </div>        
+        <% end %>
+
+        <!-- Insurance -->
+
+        <% if @booking_item_family.insurance %>
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%=t.booking_item_extra_data.insurance.title%></h3>
+              </div>
+              <div class="block-content block-content-narrow">
+                  <form name="element" class="form-horizontal" method="POST">
+                      <input type="hidden" name="reference" value="<%%=entity.reference%>"/>
+                      <div class="form-group">
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.insurance.insurance_valid%></label>
+                        <div class="col-md-2 checkbox">
+                           <label for="insurance_valid">
+                             <input type="checkbox" name="insurance_valid" id="insurance_valid" <%% if (entity.insurance_valid) {%>checked<%%}%>>
+                             
+                           </label>
+                        </div>        
+                      </div>                
+                      <div class="form-group">
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.insurance.insurance_start_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="insurance_start_date" name="insurance_start_date" class="form-control"/>
+                         </div>
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.insurance.insurance_end_date%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="10" id="insurance_end_date" name="insurance_end_date" class="form-control"/>
+                         </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md-2 control-label"><%=t.booking_item_extra_data.insurance.insurance_company%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="50" id="insurance_company" name="insurance_company" class="form-control" <%% if (entity) { %> value="<%%=entity.insurance_company%>" <%% } %>/>
+                         </div>
+                        <label class="col-md-3 control-label"><%=t.booking_item_extra_data.insurance.insurance_policy_number%></label>
+                        <div class="col-md-3">
+                        <input type="text" maxlength="50" id="insurance_policy_number" name="insurance_policy_number" class="form-control" <%% if (entity) { %> value="<%%=entity.insurance_policy_number%>" <%% } %>/>
+                         </div>
+                      </div>
+                      <hr>
+                      <div class="form-group">
+                        <div class="col-md-8 col-md-offset-4">
+                            <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button pull-right" value="<%=t.entitymanagement.update%>"/>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
 
         <!-- Other information -->
 
